[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "struct_crf"
author = "Kemal Kurniawan"
author-email = "kemal@kkurniawan.com"
home-page = "https://github.com/kmkurn/struct-crf"
requires = ["torch ~=1.0"]
requires-python = ">=3.6,<4"
description-file = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.flit.metadata.requires-extra]
test = ["pytest ~=5.4", "pytest-cov ~=2.9"]
dev = ["flake8 ~=3.8", "mypy ~=0.780", "black ~=19.10b0"]

[tool.black]
line-length = 96
